added about section

--- a/PMH/blog.html
+++ b/PMH/blog.html
@@ -290,6 +290,11 @@ background-image: -webkit-gradient(
                 </ul>
             </div>
 
+            <div class="about port">
+                <h2 class="no_bottom_margin">About the PubMed Health Blog</h2>
+                <p>A short paragraph explaining who we are to people who have no idea what NIH, PubMed, etc.</p>
+            </div>
+
         </div>
     </div>
 </div>
