blog styles and anatomy styles closer together

--- a/PMH/anatomy.html
+++ b/PMH/anatomy.html
@@ -143,12 +143,15 @@ background-image: -webkit-gradient(
 }
 </style>
 
+
 <!-- new anatomy styles -->
 <style>
+@font-face{font-family:"Merriweather";src:url('fonts/Merriweather/Merriweather-Regular.ttf');}
+h1{font-family:Merriweather,Georgia,Times New Roman,serif;font-size:28px;line-height:40px}
+.summary_wrap{margin:.5em 0}
 .content a.a_source{color:#666}
 .source{font-size:11px;color:#666;font-style:italic}
-.image_box{float:left;width:302px;margin-right:2.5em;margin-bottom:1.5em;padding:10px 0 1em 0;border-top:2px solid #ddd;border-bottom:2px solid #ddd;border-radius:8px;position:relative}
-.anatomy_image img{margin:0em 1em .5em 0}
+.image_box{float:left;width:302px;margin-right:2.5em;margin-bottom:1.5em;padding:10px 0 1em 0;border-top:2px solid #ddd;border-bottom:2px solid #ddd;border-radius:8px;position:relative}.anatomy_image img{margin:0em 1em .5em 0}
 .top{border-bottom:0;margin-bottom:1.25em}
 .image_box .description{margin:auto;font-size:12px}
 /* should be added to the ".more_research h2" rule from previous pages */
@@ -173,7 +176,6 @@ background-image: -webkit-gradient(
 .enlarge{position:absolute;background:#000;background:rgba(0,0,0,.8);color:#fff;padding:.3em .5em;opacity:.5;top:0;left:5px;border-radius:6px;
 -webkit-transition: all .5s ease;-moz-transition: all .5s ease;-o-transition:all .5s ease;}
 .image_box:hover .enlarge{opacity:1}
-
 
 
 /* proposals for site-wide changes */
