opacity for buttons

--- a/PMH/blog.html
+++ b/PMH/blog.html
@@ -214,7 +214,8 @@ background-image: -webkit-gradient(
 /* just becuase i hard code the rss url, doesn't mean you can. find it in the portal db */
 .rss{background:transparent url('http://static.pubmed.gov/portal/portal3rc.fcgi/3822452/img/29146') no-repeat left top;padding-left:21px}
 
-
+.blog_post .social-buttons{opacity:.25;transition:opacity .2s linear}
+.blog_post:hover .social-buttons{opacity:1;transition:opacity .2s linear}
 /* stolen from NWS-403 */
 .social-buttons button {
 background: none no-repeat scroll left top transparent;
