blog design done pending comments, visual consistency across the other topic pages

--- a/PMH/anatomy.html
+++ b/PMH/anatomy.html
@@ -51,7 +51,7 @@ background-image: -webkit-gradient(
 .more_research{margin:2.5em 1em 0 0}
 .more_research p{margin-top:.2em}
 .alt-portlet h2{color:#2f4a8b;margin:.8em 0 .4em;font-size:1.0769em}
-h1{color:#2f4a8b;font-size:1.8461em}
+h1{color:#2f4a8b;font-weight:normal}
 .four_col{padding-left:2em;width:29%}
 .item dl{margin-top:1.5em}
 .item dt{font-weight:bold;font-size:1.0769em}
@@ -146,6 +146,7 @@ background-image: -webkit-gradient(
 
 <!-- new anatomy styles -->
 <style>
+.topicpage_wrap{width:95%;margin:0 auto}
 @font-face{font-family:"Merriweather";src:url('fonts/Merriweather/Merriweather-Regular.ttf');}
 h1{font-family:Merriweather,Georgia,Times New Roman,serif;font-size:28px;line-height:40px}
 .summary_wrap{margin:.5em 0}
@@ -187,6 +188,7 @@ h1{font-family:Merriweather,Georgia,Times New Roman,serif;font-size:28px;line-he
 <img src="header.png" style=""/>
 <div class="grid">
 <div class="col twelve_col nomargin shadow">
+<div class="topicpage_wrap">
     <div class="col eight_col">
         <div class="content">
             <div class="head anatomy">
@@ -322,6 +324,7 @@ h1{font-family:Merriweather,Georgia,Times New Roman,serif;font-size:28px;line-he
         </div>
         -->
     </div>
+</div>
 </div>
 </div>
 </body>
