--- a/PMH/hbv24.html
+++ b/PMH/hbv24.html
@@ -8,6 +8,9 @@
 <link href="../css/standard_grid_css.css" rel="stylesheet" type="text/css"/>
 <link href="../css/standard_portlet_css.css" rel="stylesheet" type="text/css"/>
 <style>
+.topicpage_wrap{width:95%;margin:0 auto}
+@font-face{font-family:"Merriweather";src:url('fonts/Merriweather/Merriweather-Regular.ttf');}
+h1{font-family:Merriweather,Georgia,Times New Roman,serif;font-size:28px;line-height:40px}
 body{margin:0}
 .content{/*margin-left:1.231em*/margin-left:1.8461em}
 .head{overflow:hidden}
@@ -51,7 +54,7 @@ background-image: -webkit-gradient(
 .more_research{margin:2.5em 1em 0 0}
 .more_research p{margin-top:.2em}
 .alt-portlet h2{color:#2f4a8b;margin:.8em 0 .4em;font-size:1.0769em}
-h1{color:#2f4a8b;font-size:1.8461em}
+h1{color:#2f4a8b;font-weight:normal}
 .four_col{padding-left:2em;width:29%}
 dl{margin-top:1.5em}
 dt{font-weight:bold;font-size:1.0769em}
@@ -147,6 +150,7 @@ background-image: -webkit-gradient(
 <img src="header.png" style=""/>
 <div class="grid">
 <div class="col twelve_col nomargin shadow">
+    <div class="topicpage_wrap">
     <div class="col eight_col">
         <div class="content">
             <div class="head">
@@ -262,6 +266,7 @@ background-image: -webkit-gradient(
                     <li><a href="#">Leukemia</a></li>
                 </ul>
             </div>
+        </div>
         </div>
     </div>
 </div>
