--- a/PMH/anatomy.html
+++ b/PMH/anatomy.html
@@ -210,7 +210,7 @@ h1{font-family:Merriweather,Georgia,Times New Roman,serif;font-size:28px;line-he
                    
                     <div class="image_box">
                         <a class="anatomy_image" href="#">
-                            <img src="http://iwebdev2.ncbi.nlm.nih.gov/staff/welkere/media/medium_thumbs/CDR0000466533.jpg" alt="image_alt_text" />
+                            <img src="http://iwebdev.ncbi.nlm.nih.gov/PMHAuthoring/media/Images/medium_thumbs/CDR0000466533.jpg" alt="image_alt_text" />
                             <span class="enlarge">Click to enlarge</span>
                         </a>
                         
