--- a/PMH/anatomy2.html
+++ b/PMH/anatomy2.html
@@ -206,7 +206,7 @@ background-image: -webkit-gradient(
                    
                     <div class="image_box">
                         <a class="anatomy_image" href="#">
-                            <img src="http://iwebdev2.ncbi.nlm.nih.gov/staff/welkere/media/medium_thumbs/CDR0000719086.jpg" alt="image_alt_text" />
+                            <img src="http://iwebdev.ncbi.nlm.nih.gov/PMHAuthoring/media/Images/medium_thumbs/CDR0000719086.jpg" alt="image_alt_text" />
                             <span class="enlarge">Click to enlarge</span>
                         </a>
                         
